[project]
name = "javarush-marathon"
version = "0.0.1"
description = "JavaRush marathon telegram dating bot"
authors = [
    {name = "Selector0073"}
]
license = "MIT License"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-dotenv (>=1.2.2,<2.0.0)",
    "openai (>=2.44.0,<3.0.0)",
    "python-telegram-bot (>=22.8,<23.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
